# ChangeLog for dev-lisp/gcl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl/ChangeLog,v 1.66 2014/07/11 08:50:33 patrick Exp $

  11 Jul 2014; Patrick Lauer <patrick@gentoo.org> gcl-2.6.10.ebuild:
  Stable on amd64 #511170

  16 May 2014; Andrey Grozin <grozin@gentoo.org> -gcl-2.6.7-r3.ebuild,
  -files/flex-configure-LANG.patch:
  Removing an old version

  15 May 2014; Markus Meier <maekke@gentoo.org> gcl-2.6.10.ebuild:
  add ~arm, bug #509842

  30 Mar 2014; Andrey Grozin <grozin@gentoo.org> -gcl-2.6.8_pre20130314.ebuild,
  gcl-2.6.10.ebuild, +files/gcl-readline-6.3.patch, +files/gcl-gmp-6.patch,
  +files/gcl-tcl-8.6.patch, -files/tcl.patch:
  New patches to gcl-2.6.10 for compatibility with readline-6.3 and gmp-6

*gcl-2.6.10 (04 Feb 2014)

  04 Feb 2014; Andrey Grozin <grozin@gentoo.org> -gcl-2.6.7.ebuild,
  -gcl-2.6.7-r1.ebuild, -gcl-2.6.7-r2.ebuild, -gcl-2.6.8_pre20120805.ebuild,
  +gcl-2.6.10.ebuild, -files/2.6.7-fix-configure.in-gentoo.patch,
  -files/gcl-2.6.8_pre20090419-configure.patch, +files/64gcl-gentoo.el,
  -files/gcl-2.6.7-fix-configure.in-bfd.patch, -files/gcl-default-el.patch,
  +files/tcl.patch, metadata.xml:
  Version bump, cleaning old

*gcl-2.6.8_pre20130314 (14 Mar 2013)

  14 Mar 2013; Andrey Grozin <grozin@gentoo.org> -gcl-2.6.8_pre20090419.ebuild,
  -gcl-2.6.8_pre20111221.ebuild, +gcl-2.6.8_pre20130314.ebuild:
  Version bump (hardmasked)

  09 Nov 2012; Andrey Grozin <grozin@gentoo.org> gcl-2.6.8_pre20120805.ebuild:
  Added ~amd64 keyword

*gcl-2.6.8_pre20120805 (05 Aug 2012)

  05 Aug 2012; Andrey Grozin <grozin@gentoo.org> +gcl-2.6.8_pre20120805.ebuild:
  Current cvs snapshot (masked), useful for maxima

  07 Jun 2012; Zac Medico <zmedico@gentoo.org> gcl-2.6.7-r1.ebuild,
  gcl-2.6.7-r2.ebuild, gcl-2.6.7-r3.ebuild, gcl-2.6.7.ebuild,
  gcl-2.6.8_pre20090419.ebuild, gcl-2.6.8_pre20111221.ebuild:
  inherit eutils for epatch
