@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 64gcl-gentoo.el 184 SHA256 97842389c5509c45ebaf7020a72410ec6fc59ebcf539c782d4247b7252e8c633 SHA512 06749b0c4ec7a34a7fdbb591d40106fe00a794e6db0950cc7187293d4c495d5c908235a2ba38236132618442924a7feae08496356fcd4b0139477cd89121e3cf WHIRLPOOL e0d266f96e5383f1e231dafabe6ba422f40a149a9f94b66b81685109ea66f18692525715c1faebd3eb1c49fe4efcd7de677b1268cb83af996759972c3fdcacdb
 AUX bootstrap-gcl 336 SHA256 4d9f19e461b5bfc3e570b6812cf35dcf8ae98788b7eb4d4e04368a2f801f4244 SHA512 481a9ffa1102534c36a1a2084dda4b1ecd822888fafac4e6f0691b73ce0cc60e5328f628998ccef38bf75a26f3b79b24adf59562dc7cad23c3033a22d9593d0f WHIRLPOOL 9981d0e045775de0188ff75d82f8d0a78364323ffacfa690fa516ea95fbac95d69fc7ce657bbc020f8fed264103b9b3c32f643b992f6b5408b3a0a782bc4ffc9
 AUX gcl-gmp-6.patch 363 SHA256 2a2929e93e498f9537c6575d32cba0b778f278527486d97ee006e5b697626ce6 SHA512 cc578a915d154e94cf992f79e5a0130d294f506da13315bef060e19b08af3390942b2ebd5b4989acb37582315f3396fe605b56e9e441755728f54cf693be0ef1 WHIRLPOOL b656ae78fbd3819cc7b54922a64e6410ef70d96e990a259b56fb43588e4cceb6970289a9c196f9f29e3275db6b8c31b718c3ce6096e662063bf18d3a21b7395f
@@ -5,6 +8,28 @@ AUX gcl-readline-6.3.patch 656 SHA256 ef91a0c7743d4773a285d4e61e264ea3d94d6d74ca
 AUX gcl-tcl-8.6.patch 3331 SHA256 1a2a267b2bf993dde577686190ef3757c7a25f69bbe88811385074de987c8338 SHA512 108835fd285d6198935c6c1d20c96bc405f3c47dec66fc30201e01cd163734933cc0107b9a9035f728a594f1280a0c1bbfde2087ba5149d46c3b55ca066e3ca4 WHIRLPOOL 5a4cb6c43769de29def6b95a0a72fa4e9fc226e9f0827f5460a46f8bf74f9bbe60b7d57c4034149e4035f9d5f17925ea1b81e47343f8ae2866216d134c299ca6
 DIST gcl-2.6.10-fedora.tar.bz2 695718 SHA256 629da9f8288585d088017140da96de09d82a12ed0cf2f139f4fe9d9b5957ad96 SHA512 3e0ffaec859783443a8941a29302c7a17c9538ef2177d449ad34e24292c174de7bb8760a6d327e08f012773032f0d0a5230b79c7e4b4f5bad8354bf10a28af4c WHIRLPOOL 35dd9239ac27f99b98e8b1eb822f39e18b0ea1edcb991ff7b1b441408475148ac684a96ae2df6ea83e979297269c10520fdbdbf4f5b4377a26e7b071d6c26fd1
 DIST gcl-2.6.10.tar.gz 5490689 SHA256 79a1fb2f92b5e86f24988448db3e34116ab6ef7c93ad839848edd01ad06651ef SHA512 bbaacce712f15130550bcdf7e53edf4df9ab955e84ec701087034115df1c1e657d956853d5db85d7e88709981f9b7fd4c9df7acf6c8588a8ccf5f05e4e666aed WHIRLPOOL 8253507a02bd3adcf313e359fb346b19a2cc207c5a137b461addc117f00516cdd6ca28e0a7b5c0f3a48b72ba8f0bf2a3d6098297875db3281c0ef53ece474dfa
+DIST gcl-2.6.11-fedora.tar.bz2 680715 SHA256 cda649cf9049838bb8c69a02ab867b71c4944dad73c8cd5ca873e72c5efd2421 SHA512 a38e92571c0558aebe1f36613afb6da29338b9c1b779df2db6b6e5ad5b79758523a2036dc4d29d192a19a1a71103c42022f165e1a138e469338afcc117599eb9 WHIRLPOOL 01437336dfa1d92517a5de46cf6948e040b6b0a8eca309241e7f061cf62417ae26d4e8fa783b3eae56436187c3dab39463fbec968a543e53bff310e6b70c2213
+DIST gcl-2.6.11.tar.gz 7047082 SHA256 44058f029a631e8ebae38c6c5a25e2f986b5bfdd8e6283b32d7e56723efafb9c SHA512 0cec0e0e138ec13bccd5e52b2f803ccc6be5afc3c284c26550abb4392488fd8cf0085d5c3a99d9a6aba24dc2f7160341c98741003d8d09728e99da1cd909b325 WHIRLPOOL 610c8fb062381f66badc5e1982b502b891467041c21d695c228f1ff028e5570f96fd57cf620f92466bce3369263a493b8e3bf855cd76d389a6a617f65f6e4e59
 EBUILD gcl-2.6.10.ebuild 4027 SHA256 51cafa26053e64df8ca0459d3de3a334a55017d5ad4200d195ff8985638c1b9c SHA512 cc82e22ac1b197e92eef3b7c07f6c930e47337b20afccd0c1839851804ccb7fc9b80a3b9b78645f81d1db6effdde543563a989e5db984c5740bf5a7c057d0c4b WHIRLPOOL 030494df1637dddb2ed659b02774c205b5813a90a80a9b1a29f440c23c588a71637ee87d5a1ded67efa6988fd3d6ab2d58f13f8b24884fb3b9727059dc86ea54
-MISC ChangeLog 10624 SHA256 4b0d0573423804a0c0c2066192ae15b7b66fb5b49859fe0d40d1b315ea250f55 SHA512 6e7c6587f16f948eaeb73d3ae36e73224999dd366c5989a3a684883305d961387de1bf4c2f66a7edfc508af152c31be094f3fd8231a4e10ec3abd114ad3acbab WHIRLPOOL b2bb39b948f1e22d72ec325fa0cbea9e2ca92bceff641f01e18a3f454aaa664422cbdb8a20fc72bbb7e34b4d2191ad6632b68a8fb7fa21608231c6237cc89f82
+EBUILD gcl-2.6.11.ebuild 3866 SHA256 d3f8c45a970bbdeeded0ba392713088dd9b8f5b70183c8592c15ca37a0bdf806 SHA512 ac4f1a0ba4b2c30c81fb28e70f18562ae97fca165474da46614d08d7a594d1ff5474a3b1c1aa4c83025f064bbe0d3dd402ffdb274bec447e14965d23b8e5ea4b WHIRLPOOL 886557ca528bfdb5b00b339c13d71330960f433f2783c5899b5939876294c8694d860ec6a35601fa0ac5a070f3fdd815b62abf03bb32c1d9acb29d5da0ec7d5a
+MISC ChangeLog 10735 SHA256 154e6a2e0949035581c5c87e185db58098bb5024333b7d415fe4ec554e0f823f SHA512 6815d147104967a8ed4dfc2ddab0ca3df5a0dd8051c2995af9b4c79c0908b30939186551fc8535dfbcb65e57935257c204943cf8a9a74e548786983921a7dd3e WHIRLPOOL 8c25fdf362078b9e6733a9b8a0f7ddf5bcd3ad10c7b785dff6ca55f2976f692d103ca3107f3cb3f30a2b046544985e417804d2b0becdac828d2b40ed170a0483
 MISC metadata.xml 616 SHA256 550dedf2a1befda92ff1494243767f117b6f86d6ab4aa097c1b010399aa1f8ff SHA512 7438b640af57715de10b636101d415b90aaa9b1a7cd505d95bc353768f51185560f31e458dde68d0f24ef9c703c6ea7d2801d29d68e3bd657bc30deb578c0387 WHIRLPOOL e80174fa22fff24d50a554a4871cfc2adaa2cd5748987fa13aa75a0b3b7323c2bf010a5cb2723ac14e2eabb4d0d1577550e6245da93555765fcc8f47588fa29d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJUIsZfXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
+QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2MCwsQAIQVzBAmfI5RhLVepyneQZhy
+OAffa06OzA4E8NxTg2jFQ63caehkoTkHOJ9MFHpjNkpeP88kIpnm+6NKp52EgCzV
+H9A+vYnsNowHhMhmVvkg6xJKDDhvGMEVawNUMSqtg7+4I9RrVYSNcO7hOUXYe55s
+Yn01FmFEPGlK66tC6EVt33Us74O19vSZVUieFd80AmB16SY6UyI9+QxV29XiVit8
+DzT9hzmwTlnl5xC2oZ0rKrn6g3lZzl1clQI/Bz/d8gRGoTaxu51rkHC58mjWaxPg
+pbe0hQrSKfeK0o6qFHqaWGeQ0Uz6wKNezXj1rMn5hDoUFmhcwN+UvprPGcAO6Eme
+MNaBEN7K3f4O6HnoZl7jZD4t1MrJz0k5BIxznGQ70y3NGyyKmRhYBsh1iQZiFS2R
+2bv08bXa0llfzq4jGJyKq2TWG+klRQBVshYRr5vwdWpZ9KVoRmz0GbxNDGPZ6DqP
+GspULd3VTUDg6Ng1uRVuApLaXvURmuUEmF3+RLL7c5ORx3ogdTwD1aUwCqgt3lv1
+fecRUTdWmlhyoVFhlORE3ETGuobzReQtsN2+LeDg5VwJp7qlq9nxD+zXb8uww3+i
+KG8My5eK6Xxtpve4rbGgZ2H/w4/I+H8Mzq9X7FnCk6n/0o5RizjhrgbpFvsEAziw
+3+ks/delxdtfL4o0g16X
+=cU6C
+-----END PGP SIGNATURE-----
