@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare test
+DEPEND=emacs? ( virtual/emacs ) readline? ( sys-libs/readline ) athena? ( x11-libs/libXaw ) >=dev-libs/gmp-4.1 tk? ( dev-lang/tk ) X? ( x11-libs/libXt x11-libs/libXext x11-libs/libXmu x11-libs/libXaw ) virtual/latex-base virtual/texi2dvi >=app-text/texi2html-1.64 >=sys-devel/autoconf-2.52
+DESCRIPTION=GNU Common Lisp
+EAPI=5
+HOMEPAGE=http://www.gnu.org/software/gcl/gcl.html
+IUSE=+ansi athena emacs +readline tk X
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=LGPL-2 GPL-2
+RDEPEND=emacs? ( virtual/emacs ) readline? ( sys-libs/readline ) athena? ( x11-libs/libXaw ) >=dev-libs/gmp-4.1 tk? ( dev-lang/tk ) X? ( x11-libs/libXt x11-libs/libXext x11-libs/libXmu x11-libs/libXaw ) virtual/latex-base
+RESTRICT=strip
+SLOT=0
+SRC_URI=ftp://ftp.gnu.org/gnu/gcl/gcl-2.6.11.tar.gz http://dev.gentoo.org/~grozin/gcl-2.6.11-fedora.tar.bz2
+_eclasses_=elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=ef2009084aa751523d6eeee570c97899
