@@ -10,26 +10,26 @@ AUX ceph.logrotate 491 SHA256 85f0b0c73a2c400bfff49609db45d995a2b2a2a0e64a88569d
 DIST ceph-0.67.10.tar.bz2 3385142 SHA256 34401f59b85ed3b5ad5c687d453372b96341faa3aa726c65609e88c959b96c68 SHA512 12c30fc103cdd5b0b897c5ee54a73f41cabf3b144cf0c8b0bfdc1dafb288718e6e67aad92720a70970cc71b87b4ac05f42c095a570da58ebcce193ddbb2cf553 WHIRLPOOL 64989b0e337aaf18cad7de938d95a51f99907ba3f599a4aca45d5ae45591edc486b2ad34b1f1746f76b386438e4c1611a230e3e3375585983c6289d8cea3585f
 DIST ceph-0.67.9.tar.bz2 3390731 SHA256 cc2f50641550e635324db1ffa0157fabacc8ccc820a250c3f4b51117c033e3ca SHA512 71b652ec2c30a168d4bc58d1bfa94ba4d235569a480681cab8a52c4b46e0b4d5b1c5fe04f3b921b3951dcd0dea8425cb0b531cd403c7edb3cee3cc44e3d30510 WHIRLPOOL 2602c232e8a0c3b80db15e01ea91dabb8e57a22a67e433d20713881d9569bc2adda9fd3e1fbe66efc71ab4c261c8c7bb7c71c48443da70cbf03bb693d8e1c21e
 DIST ceph-0.80.5.tar.bz2 4084478 SHA256 912c53204e678f870e2a9650bb79101b0b2fcad2a60bd79c62a12fb0b811d371 SHA512 e0ea985330bebc7299a7e97655b0e3b26fdc042f2a2bd4e6e5bf1fcfeb6378ce3cd95d7bead3111e970d61f119177ce5bbcf51ee82d4228e83eba6f37ae686fb WHIRLPOOL 99cf5757386a9ffe879a480d56e7654b57c6722a0cee4e26418fb3e670cdb071fbac2ba29bfdc119a9e2d39a3d67975dc32a520222ac1239df5c30b27722c0b0
-EBUILD ceph-0.67.10.ebuild 2809 SHA256 11124ba15f664daae6a50f1367025175a17e800ae1a5d314b4eeaf91fbff2140 SHA512 9918f93b798573c6deb091562830481f2c9d11ddfae0eea8de4b9ce25f5a3b579495da067000d65fd7a51904902aac5f912a5762b115b643e153e1b0d526e68f WHIRLPOOL a6eae34a30ba429d157fbd49611fe63ca6652e11d502af0b40a1e89d9413476c0f7a4e9ffea4a555089e61fc072d8a7ef5be37cf22190460268ab8d34bef3dd3
-EBUILD ceph-0.67.9.ebuild 2805 SHA256 ae4e07e3e5b4fd5cf8541bdcad34786e25c5402b8e7f686f2ba2f1500ef28586 SHA512 714ae9f470c491cd0712651b92cb62a31df10c8354ff8f3884976aa8364c8bc48d436b0fa08dabe26a65742bfdfd8dea97c6a633f6361cb0f0a92900def30098 WHIRLPOOL d84c6d6d1d8fb4845b990bd531ec3ade2533312f35c69a70a42aa7bb6f53d02c139c1486ec3ea4fd42a586abb0ac3618f515da3ed497400f82d6227896d37be3
-EBUILD ceph-0.80.5.ebuild 2924 SHA256 c54571c29bb6c06035a200575de43cd611d6e29878151c610baf2b0277d54d46 SHA512 4d57726f9c8fe801765e947150d5d102e9f67211191c5a0ae3f097a9e5a16561a291f26e8ac93f8319d1c60d48e0fffbd227a96b2c4eca3e755d62278ec53e96 WHIRLPOOL 8f7fd6bc51ec290d188f1c0d13e7aa2e771b4055da8432177fa68e0376b830ed657e76310f946407b93a2a07567654689c9cb32f3d1157ab0e1d8f355761cb54
-EBUILD ceph-9999.ebuild 2831 SHA256 53b9f5f999f58928106b4f778b766d06484ca2b3e4e435f30be204b57613657c SHA512 95a57fbc1a2db98090b5d33cd0e427f0d4a73bf2067a27bddba11d6e692858f47281a2036a2e90e5a6ca5956eb6abbf942e247afd43ee15b33f3ef5e59313fdd WHIRLPOOL 81296e442cbb1ee0bb48e4d9493a14df8fe4e59e412ee2ff5206464775397cb95582100c5d51b509eb343b190d9f0ca3d28f18ebf76d135e9d79cf9d009121e0
-MISC ChangeLog 11008 SHA256 2fef556cac089057f0475da1dc027dff1cfc1490accf643e96ec067b43f66dcc SHA512 45baf8ed5c1ac9d6c3e9350106a7e31d8e05f74854754f11e8696306bebfbc458ba01a2bdf72fcbdae7ebda2028e05b3b9c5beb6c35b9b3db9077a4699ba3dad WHIRLPOOL 6b2ab809dc0d86b55ff761fdc5435763a930be6bd5029c6aeced3beef10bc22acabefe2764312839e99964168b2ab6be972489bd6018001882e6ea0edbb13c1e
+EBUILD ceph-0.67.10.ebuild 2808 SHA256 a95d4265de5acd79b74b4288eac70c4aee9943be92542018b129f608163c5121 SHA512 42fbf4917e4baf0badf72ba8595763806ddbd721d32268c5e51252e45f15033e705ccffdae48ab032e361d4f329ae7aa6b1c4c394fedf1f313e273c10c13e06a WHIRLPOOL ff89604e1ac6bf0888ecb25769125aa8ca792b93a0d5f8c0ded9995c11ed5dede8d6fd711657f8107cdd5a99b41f2bac093b113fd92f975075e9c59b6a928989
+EBUILD ceph-0.67.9.ebuild 2805 SHA256 2aa738ac1224f373cf75c5e0e8bc4b2a52bd4728f6533ba3b02e7c361348ecaf SHA512 baa086134a707592e5c22b55b40a0d8822fdd6156d847a939158d327342df0af07686df381baa52f2357f06a71e7756a93bd03544900390b016e57358ca7add5 WHIRLPOOL c7b9b44224e51797be9c2a3ff19c7dbeabe9fae5833f7484d4427ee64020d806db4e075c5665b3c9de2c3fe801af040da2c8cf7b25c34b6222d14e517e886e43
+EBUILD ceph-0.80.5.ebuild 2923 SHA256 494ae6e43e8e9df4ad128192526962c436e29274aed928c80ce9979df3d65487 SHA512 50366cd164c932fc86d738bb9b99aab04304b9e7324e3de5be0a71b47268ca0dc93c5114a77775876815160c228f635f631547f9e6deb12966d9db1850e01126 WHIRLPOOL 8f297155940ba9bb0bac2b976019db04c7882d969e42d4e9ff913fbcde83e4df0c9ea38492e4f19f38f6582b54e440578e0e27c442829bf68d791a0fba77c917
+EBUILD ceph-9999.ebuild 2830 SHA256 2c586ce833d1c1eb35d13c085f653d5a4de53eb2036c1eb4ed441a9d675465b6 SHA512 449ded1cb21b55bc79982076638db40e6690d795895e11bdcf7f58f8ba2e42a7b29dea76f4b4af78f2cf9934d1093819420e1b1750cd767ce2f6c7f7ccdd4636 WHIRLPOOL 6249a316ae5399ab4df52cd1231a50652d771315f8d1d5e2acf4bf9197e05437f879bb211e28f33ab8147d7af62e60c1785bcf4b0ebc54b57702fca7cdda6d75
+MISC ChangeLog 11197 SHA256 a4a4834353a6f24705e1fe42ac4330340c50964037619d54caf789f5e7e6d9f1 SHA512 6a2ea453eceb2a8b91022e7715aab132e4d661353ff32a65e4b788fe6e5cba3b53f521dbc22be99e83039e240f12004898d9c36fbe225c957465f889abea8170 WHIRLPOOL 78cea5d9dcec989561d2782931269862f84c5559fd13fd5f99dec894af30587655b92a90cc4745e49a0d9959e35b54109fef22ae1ad9b5bc32eb20177b63bfd0
 MISC metadata.xml 948 SHA256 72989673dd794fc1d9e83509d15991407862cd2c4817bcad130018442ca4b866 SHA512 4bd4189f1f5f181c915a7afac73dd774a877aae27026cd5c2ad32a89591ec6dcc0deb4ca1fb572d5f517d1cfa1edb94a345c6b0c03a39b1904ab8882e972ff5c WHIRLPOOL a89a309c10b0422e5045b7a1e62561efeda3125e35172fb33feea87fb44c14ae08cdf4810bb0acdc8eda8f856987d11ed77c157809635fe0a984764ee3b73ce8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT+0AjAAoJEJIMDbyqvv1V/lMQAJGofJej2nEqoQRp8A6HjbDC
-0arI+O/KSVuT6nTyhRWnvo2Z+oZaIPtrGQeUtAh2GBKKKj0QOLwqnGWG7NTmS2yg
-E8EWp4a72YDjJxzZY7xNrlVCnNy3Ks8o68un3fail6oAPGrTPUZsr2e/+9h0TcGs
-K9lmkVvV9XcuoOtrBWrs5ci6Mz+uXcR8YB2G2gm6qGOir2GdosyjjSc/zubEE3A/
-HGVX91AW+p2yb9zi8uf64Nxo1raStBPQXH8pC6n8q8HYPj+xbrbTInSMvrg6XkVF
-cquTvtMSvbVEt5H/4gVCYI2mpBHa6JkwDsWwKe/GuZOjxOPoRnRxfaEHnV/IxGGO
-VUmF++sQan/zZpAFKjo6Ge4vPuTEUbX4YkVXEc/lUtxy3XxG3YZuCTG9/YsWxe45
-dFCguXs4Z1S3C2q/uHEXp03Euvhfnp/gdmjtyg1iOsFqXyYgLxDwe4q2qbSpun5F
-oEo7wI9SKnFZG/1MOi8HMZHbTLSFY0PA8A5KprdkbPqtIRZv4HfbRSQXLjTOV6nd
-t7fiHXQP9hCmmj6p1yp0AKdi3WnoJRwGR77leWzRz4AnpoDlUHpRpjX184pulRxH
-VCDZS7yNsksyKfKx9S9sJ+EAoHbCNdTRO+74qIIOOUeM+GfGT0NWQnwQ7/Aj+JjX
-kzZvJUq+Q57O1fgGmx+K
-=lE1D
+iQIcBAEBCAAGBQJUIssJAAoJEJIMDbyqvv1Vy88P/RKCGNZCTCYMir2lbBeZeJh4
+e00wbWdvfx7N3rI9HE6A1EoAvZsu6DC/OS0QTSNnj0Ft8TBg2Vp79YoppzUPpQTp
+aWn28BgxdzErCSm5Lz+PHQEmR9lblViESO1vHcacJWyRC3JVhxTd4xrbbtGFepwO
++vpq8sfjFu0Q6K8OH1tQPV46VEdqgyn0+YpcXGZrUSd3wfODDHWxrkL1Kil42u9O
+/ys08czAFslO4GmlmoJP6U5B9bedelSzMRKfvGN2nRbPJfGKVMyG6J/49pjaWiYu
+n+rwmKVA/AxRNxfNVwWwABrBsWVevHFFFF1y1Og+i4/k0qyc67HpcceIYjTbYR+m
+H2sBnYEipk3Kzy+aOcNJBBw6XmCASRZErsBc/lCGmfYBsy0EcCtfecm9Fu2oGkyT
+AQnzUoljmGwMx8fLPKELZ8mV7dq55+1VZAqcnwbBRaNHvcPrsASCiIURefh1K5sO
+EAoelXwkIhDjMsQBcHZe6LkOCGhEzmEgiKcOfxpk9xppuGE5RGVyDenev+NDxzfO
+QQGQTPeKu+gCIhkqFZed4yjOc3sOAVX9lRdnBxq2PNDdguffPoKaBy3Pgx1z3MAB
+u8i1afv7MTRy5F+FlGaqv/bd/202ATxaeXue3KfRqwY/oIaZswNrvw+Yav+mRmDD
+6ZBRQmtS+l83HhVcv0dK
+=EIxi
 -----END PGP SIGNATURE-----
