@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ceph-9999.ebuild,v 1.13 2014/08/19 08:57:46 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ceph-9999.ebuild,v 1.14 2014/09/24 13:45:35 dlan Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7} )
@@ -129,5 +129,5 @@ src_install() {
 	udev_dorules udev/50-rbd.rules
 	udev_dorules udev/95-ceph-osd.rules
 
-	readme.gentoo_src_install
+	readme.gentoo_create_doc
 }
