@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/ceph
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ChangeLog,v 1.60 2014/08/25 13:57:20 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ChangeLog,v 1.61 2014/09/24 13:45:35 dlan Exp $
+
+  24 Sep 2014; Yixun Lan <dlan@gentoo.org> ceph-0.67.9.ebuild,
+  ceph-0.67.10.ebuild, ceph-0.80.5.ebuild, ceph-9999.ebuild:
+  fix libtool archives issue, readme.gentoo related, bug 523522
 
   25 Aug 2014; Yixun Lan <dlan@gentoo.org> -ceph-0.56.3.ebuild,
   -files/ceph.confd, -files/ceph.initd:
